--- a/src/scss/body/body.sass
+++ b/src/scss/body/body.sass
@@ -1,4 +1,4 @@
-
+@import "../carousel/carousel"
 $font-stack:    Helvetica, sans-serif;
 $primary-color: #333;
 
@@ -6,7 +6,4 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
   background: $font-stack;
-}
-h1{
-  color:red;
 }
