--- a/src/scss/carousel/carousel.scss
+++ b/src/scss/carousel/carousel.scss
@@ -1,3 +1,9 @@
-.carousel {
-  color: red;
+
+$font-stack:    Helvetica, sans-serif;
+$primary-color: #333;
+
+h1 {
+  font: 100% $font-stack;
+  color: $primary-color;
+  background: $font-stack;
 }
