--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,9 @@
-@import 'body/body';
+
 $font-stack:    Helvetica, sans-serif;
-$primary-color: #333;
+$primary-color: #fff;
+
+body {
+  font: 100% $font-stack;
+  color: $primary-color;
+  background: $font-stack;
+}
